# Scanner

./: .gitignore  README.md  UPDATE.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/east/scanner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/east/scanner/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/east/scanner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scanner-all/: build.gradle
scanner-all/src/androidTest/java/com/phynos/scanner/all/: ExampleInstrumentedTest.java
scanner-all/src/main/: AndroidManifest.xml
scanner-all/src/main/java/com/dtr/zxing/activity/: CaptureActivity.java  CaptureActivityHandler.java
scanner-all/src/main/java/com/dtr/zxing/camera/: AutoFocusManager.java  CameraConfigurationManager.java  CameraManager.java
scanner-all/src/main/java/com/dtr/zxing/decode/: DecodeFormatManager.java  DecodeHandler.java  (+2 more)
scanner-all/src/main/res/drawable/: tj_click_selector_qr_back.xml
scanner-all/src/main/res/layout/: activity_qr_scan.xml
scanner-all/src/main/res/values/: dimens.xml  ids.xml  strings.xml  styles.xml
scanner-zbar/: build.gradle
scanner-zbar/src/main/: AndroidManifest.xml
scanner-zbar/src/main/cpp/: CMakeLists.txt
scanner-zbar/src/main/cpp/libiconv-1.14/: CMakeLists.txt  config.h
scanner-zbar/src/main/cpp/phynos/: CMakeLists.txt  phynos.c
scanner-zbar/src/main/cpp/zbar/: CMakeLists.txt
scanner-zbar/src/main/cpp/zbarjni/: CMakeLists.txt
scanner-zbar/src/main/java/com/phynos/zbar/: MyJniTest.java
scanner-zbar/src/main/res/values/: strings.xml
scanner-zxing/: build.gradle
scanner-zxing/src/main/: AndroidManifest.xml
scanner-zxing/src/main/res/values/: strings.xml
(+6 files in other folders)
